refactor: Improve code consistency and readability across multiple classes